feat: add burger menu with adaptive

--- a/migration-newip-to-ts/src/index.html
+++ b/migration-newip-to-ts/src/index.html
@@ -11,13 +11,13 @@
     <h1>News Portal</h1>
   </header>
   <main>
-    <div class="menu-wrapper">
-      <div class="burger">
-        <span class="span"></span>
-      </div>
-      <div class="sources buttons"></div>
+    <div class="burger">
+      <span class="span"></span>
     </div>
-    <div class="news"></div>
+    <div class="news-wrapper">
+      <div class="sources buttons"></div>
+      <div class="news"></div>
+    </div>
   </main>
   <footer>
     <div class="footer__wrapper">
