feat: add footer

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -23,7 +23,18 @@
       </div>
     </div>
   </header>
+
+  <main>
+
+  </main>
   
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <a class="footer__git" href="https://github.com/Jazzzrabbit/">Github: Jazzzrabbit</a>
+      <p class="footer__text">2022</p>
+      <a class="footer__rslogo" href="https://rs.school/js/"></a>
+    </div>
+  </footer>
   
 </body>
 
