--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -8,7 +8,7 @@
   <title>Online Store</title>
 </head>
 
-<body>
+<body class="body">
   <header class="header">
     <div class="header__wrapper">
       <div class="header__left-side">
@@ -18,16 +18,63 @@
       <div class="header__right-side">
         <input class="header__search" type="search" placeholder="Find">
         <div class="header__shopcart">
-        <span>0</span>
-      </div>
+          <span>0</span>
+        </div>
       </div>
     </div>
   </header>
 
-  <main>
-
+  <main class="main">
+    <div class="main__wrapper" id="main">
+      <aside class="aside">
+        <div class="choose-quality">
+          <h3 class="choose-quality__title subtitle">Choose Quality</h3>
+          <label for="high">
+            <input class="choose-quality__checkbox quality" type="checkbox" id="high">
+            High
+          </label>        
+          <label for="medium">
+            <input class="choose-quality__checkbox quality" type="checkbox" id="medium">
+            Medium
+          </label>       
+          <label for="low">
+            <input class="choose-quality__checkbox quality" type="checkbox" id="low">
+            Low
+          </label>    
+        </div>
+        <div class="choose-color">
+          <h3 class="choose-color__title subtitle">Choose Color</h3>
+          <label for="red">
+            <input class="choose-color__checkbox color" type="checkbox" id="red">
+            Red
+          </label>         
+          <label for="green">
+            <input class="choose-color__checkbox color" type="checkbox" id="green">
+            Green
+          </label>         
+          <label for="blue">
+            <input class="choose-color__checkbox color" type="checkbox" id="blue">
+            Blue
+          </label>
+        </div>
+        <div class="sortby">
+          <h3 class="sortby__title subtitle">Sort by</h3>
+          <select class="sortby__select select" id="select">
+            <option value="option1">By name A-Z</option>
+            <option value="option2">By name Z-A</option>
+            <option value="option3">By year high-low</option>
+            <option value="option4">By year low-high</option>
+          </select>
+        </div>
+        <div class="sortby-slide">
+          <h3 class="sortby-slide__title subtitle">Sort by slide</h3>
+          <div class="sortby-slide__slider" id="slider"></div>
+        </div>
+      </aside>
+      <div class="content" id="content"></div>
+    </div>
   </main>
-  
+
   <footer class="footer">
     <div class="footer__wrapper">
       <a class="footer__git" href="https://github.com/Jazzzrabbit/">Github: Jazzzrabbit</a>
@@ -35,7 +82,7 @@
       <a class="footer__rslogo" href="https://rs.school/js/"></a>
     </div>
   </footer>
-  
+
 </body>
 
 </html>
