feat: add nouislider

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -32,26 +32,26 @@
           <label for="high">
             <input class="choose-quality__checkbox quality" type="checkbox" id="high">
             High
-          </label>        
+          </label>
           <label for="medium">
             <input class="choose-quality__checkbox quality" type="checkbox" id="medium">
             Medium
-          </label>       
+          </label>
           <label for="low">
             <input class="choose-quality__checkbox quality" type="checkbox" id="low">
             Low
-          </label>    
+          </label>
         </div>
         <div class="choose-color">
           <h3 class="choose-color__title subtitle">Choose Color</h3>
           <label for="red">
             <input class="choose-color__checkbox color" type="checkbox" id="red">
             Red
-          </label>         
+          </label>
           <label for="green">
             <input class="choose-color__checkbox color" type="checkbox" id="green">
             Green
-          </label>         
+          </label>
           <label for="blue">
             <input class="choose-color__checkbox color" type="checkbox" id="blue">
             Blue
@@ -68,7 +68,12 @@
         </div>
         <div class="sortby-slide">
           <h3 class="sortby-slide__title subtitle">Sort by slide</h3>
-          <div class="sortby-slide__slider" id="slider"></div>
+          <div class="sortby-slide__wrapper">
+            <h4 class="sortby-slide__subtitle">Sort by amount</h4>
+            <div class="sortby-slide__slider" id="slider"></div>
+            <h4 class="sortby-slide__subtitle">Sort by year</h4>
+            <div class="sortby-slide__slider" id="slider2"></div>
+          </div>
         </div>
       </aside>
       <div class="content" id="content"></div>
