feat: add some sorting functions

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -30,30 +30,30 @@
         <div class="choose-quality">
           <h3 class="choose-quality__title subtitle">Choose Quality</h3>
           <label for="high">
-            <input class="choose-quality__checkbox quality" type="checkbox" id="high">
+            <input class="choose-quality__checkbox checkbox quality" type="checkbox" id="high">
             High
           </label>
           <label for="medium">
-            <input class="choose-quality__checkbox quality" type="checkbox" id="medium">
+            <input class="choose-quality__checkbox checkbox quality" type="checkbox" id="medium">
             Medium
           </label>
           <label for="low">
-            <input class="choose-quality__checkbox quality" type="checkbox" id="low">
+            <input class="choose-quality__checkbox checkbox quality" type="checkbox" id="low">
             Low
           </label>
         </div>
         <div class="choose-color">
           <h3 class="choose-color__title subtitle">Choose Color</h3>
           <label for="red">
-            <input class="choose-color__checkbox color" type="checkbox" id="red">
+            <input class="choose-color__checkbox checkbox color" type="checkbox" id="red">
             Red
           </label>
           <label for="green">
-            <input class="choose-color__checkbox color" type="checkbox" id="green">
+            <input class="choose-color__checkbox checkbox color" type="checkbox" id="green">
             Green
           </label>
           <label for="blue">
-            <input class="choose-color__checkbox color" type="checkbox" id="blue">
+            <input class="choose-color__checkbox checkbox color" type="checkbox" id="blue">
             Blue
           </label>
         </div>
