feat: add slider filter

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -13,7 +13,7 @@
     <div class="header__wrapper">
       <div class="header__left-side">
         <a class="header__logo" href="#"></a>
-        <h1 class="header__title">Online store</h1>
+        <h1 class="header__title">Online mystery store</h1>
       </div>
       <div class="header__right-side">
         <input class="header__search" type="search" placeholder="Find">
@@ -70,9 +70,9 @@
           <h3 class="sortby-slide__title subtitle">Sort by slide</h3>
           <div class="sortby-slide__wrapper">
             <h4 class="sortby-slide__subtitle">Sort by amount</h4>
-            <div class="sortby-slide__slider" id="slider"></div>
+            <div class="sortby-slide__slider" id="amountSlider"></div>
             <h4 class="sortby-slide__subtitle">Sort by year</h4>
-            <div class="sortby-slide__slider" id="slider2"></div>
+            <div class="sortby-slide__slider" id="yearSlider"></div>
           </div>
         </div>
       </aside>
