fix: made choose-sort work properly

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -13,7 +13,7 @@
     <div class="header__wrapper">
       <div class="header__left-side">
         <a class="header__logo" href="#"></a>
-        <h1 class="header__title">Online mystery store</h1>
+        <h1 class="header__title">Online Mystery store</h1>
       </div>
       <div class="header__right-side">
         <input class="header__search" type="search" placeholder="Find">
