feat: add hover effect to card buttons and shopcart

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -17,9 +17,9 @@
       </div>
       <div class="header__right-side">
         <input class="header__search" type="search" placeholder="Find">
-        <div class="header__shopcart">
+        <a href="#" class="header__shopcart">
           <span>0</span>
-        </div>
+        </a>
       </div>
     </div>
   </header>
