--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -16,7 +16,7 @@
         <h1 class="header__title">Online Mystery store</h1>
       </div>
       <div class="header__right-side">
-        <input class="header__search" type="search" placeholder="Find">
+        <input class="header__search" type="search" autofocus="autofocus" autocomplete="off" placeholder="Find">
         <a href="#" class="header__shopcart">
           <span>0</span>
         </a>
