--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -76,6 +76,9 @@
           </div>
         </div>
       </aside>
+      <div class="empty-page hidden">
+        <h2 class="empty-page__title">Sorry, nothing found. Try another search.</h2>
+      </div>
       <div class="content" id="content"></div>
     </div>
   </main>
