feat: add some hover effects

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -29,30 +29,30 @@
       <aside class="aside">
         <div class="choose-quality">
           <h3 class="choose-quality__title subtitle">Choose Quality</h3>
-          <label for="high">
+          <label class="label" for="high">
             <input class="choose-quality__checkbox checkbox quality" type="checkbox" id="high">
             High
           </label>
-          <label for="medium">
+          <label class="label" for="medium">
             <input class="choose-quality__checkbox checkbox quality" type="checkbox" id="medium">
             Medium
           </label>
-          <label for="low">
+          <label class="label" for="low">
             <input class="choose-quality__checkbox checkbox quality" type="checkbox" id="low">
             Low
           </label>
         </div>
         <div class="choose-color">
           <h3 class="choose-color__title subtitle">Choose Color</h3>
-          <label for="red">
+          <label class="label" for="red">
             <input class="choose-color__checkbox checkbox color" type="checkbox" id="red">
             Red
           </label>
-          <label for="green">
+          <label class="label" for="green">
             <input class="choose-color__checkbox checkbox color" type="checkbox" id="green">
             Green
           </label>
-          <label for="blue">
+          <label class="label" for="blue">
             <input class="choose-color__checkbox checkbox color" type="checkbox" id="blue">
             Blue
           </label>
@@ -85,9 +85,9 @@
 
   <footer class="footer">
     <div class="footer__wrapper">
-      <a class="footer__git" href="https://github.com/Jazzzrabbit/">Github: Jazzzrabbit</a>
+      <a class="footer__git" href="https://github.com/Jazzzrabbit/" target="_blank">Github: Jazzzrabbit</a>
       <p class="footer__text">2022</p>
-      <a class="footer__rslogo" href="https://rs.school/js/"></a>
+      <a class="footer__rslogo" href="https://rs.school/js/" target="_blank"></a>
     </div>
   </footer>
 
